# CodeBlooded

./: README.md  package-lock.json
crisislens_ml/: .gitignore  README.md  main.py  main_pipeline.py  pyproject.toml  requirements.txt
crisislens_ml/models/: base_model.py  crisis_detector.py  severity_estimator.py  type_classifier.py  type_classifier_fixed.py  urgency_estimator.py
crisislens_ml/scoring/: explanation_generator.py
crisislens_ml/tests/: test_base_model.py  test_crisis_detector.py
crisislens_ml/utils/: config.py  gemini_client.py  location_extractor.py  logger.py
frontend/: .env.sample  TODO.md  package-lock.json  package.json
frontend/src/: App.jsx  Layout.jsx  index.css  main.jsx
frontend/src/components/: AISignals.jsx  Footer.jsx  Header.jsx  IndiaMap.jsx  KPICard.jsx  KPISection.jsx  Loader.jsx  MapSection.jsx  PriorityPanel.jsx  RegisterPanel.jsx  Stagger.jsx  Timeline.jsx
frontend/src/data/: mockDisasters.js
frontend/src/pages/: Home.jsx  RaiseIssue.jsx  Simulator.jsx  Test.jsx
server/: .env.prod  TODO.md  package-lock.json  package.json
server/src/: app.js  index.js
server/src/config/: email.config.js
server/src/constants/: cookieOptions.js  emailTemplate.js  scraperLinks.js
server/src/controllers/: crisis.controller.js  ngo.controller.js  payment.controller.js  razorpayWebhook.controller.js  recommendation.controller.js  reportAnalysis.controller.js  scraper.controller.js  user.controller.js  visitors.controller.js
server/src/cron/: emailAlert.cron.js  issue.cron.js  scrapper.cron.js
server/src/model/: Issue.model.js  (+7 more)
(+30 files in other folders)
