[project]
name = "crisislens-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "torch>=2.10.0",
    "transformers>=4.36.0",
    "uvicorn>=0.40.0",
]
